# random_problems

./: README.md
2017/: calc.cpp  readme.md
external_sort/: external_sort.cpp  external_sort.vcxproj  external_sort.vcxproj.filters  file_buffer.h  readme.md  sort.h  sorting_problem.sln  utils.h
fly_to_elephant/: CMakeLists.txt  README.md  alg.txt  dijkstra.h  fly_tests.cpp  helpers.h  main.cpp  words_graph.h
fly_to_elephant/data/: google-10000-english.txt  input.txt  small_dict.txt  small_dict_en.txt
hh/hh_1_round/: hunter.h  main.cpp  random_problems.sln  random_problems.vcxproj  random_problems.vcxproj.filters
hh/hh_2_round/: islands.py  sequence.py  tasks  test.py
markov/: 1.txt  README.md  common.h  downloader.h  markov.sln  markov.vcxproj  markov.vcxproj.filters  model.cpp  model.h  model.txt  model_builder.cpp
markov/test_data/: list - Copy.txt  list.txt  small_en.txt
markov/text_generator/: text_generator.cpp  text_generator.vcxproj  text_generator.vcxproj.filters
redis_lock/: README.MD  redis_lock.go
redis_lock_pubsub/: redis_lock_pubsub.go  run.sh
settings_parser/: comments.txt  requirements.txt
settings_parser/examples/: config.txt  simple_config - Copy.txt  simple_config.txt
settings_parser/src/: settings_parser.py  tests.py
spiralling/: spiralling.go
taxi_promo/: CMakeLists.txt  README.md  common.h  mongo.h  named_mutex.h  structs.h  taxi_promo.cpp  taxi_promo.h
taxi_promo/tests/: CMakeLists.txt  preparedb.js  tests.cpp
